--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,18 +1,19 @@
 
-.centered-cell {
-  text-align: center;
-} 
 
-td {
-width: 750px; height: 600px;
-text-align: center;
-border: 1px solid #000;
+html, body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	background-color: #C0C0C0;
 }
 
-   html, body {
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-                background-color: white;
-            }
+.remoteswitch {
+	width: 10em;
+	height: 10em;
+}
+
+.led {
+	width: 3em;
+	height: 2em;
+}
