--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,11 +9,36 @@ html, body {
 }
 
 .remoteswitch {
-	width: 10em;
-	height: 10em;
+	width: 8em;
+	height: 8em;
 }
 
 .led {
-	width: 3em;
-	height: 2em;
+	width: 2em;
+	height: 1em;
 }
+
+.inputFields {
+    border: 1px solid #CCC;
+    font-size: 2.2em;
+    padding: 0.5em;
+    margin-bottom: 0.5em;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+	width: 220px;
+    -webkit-appearance: none;
+    -webkit-box-shadow: inset 0 1px 0 #B1B1B2, 0 1px 0 #fff;
+       -moz-box-shadow: inset 0 1px 0 #B1B1B2, 0 1px 0 #fff;
+            box-shadow: inset 0 1px 0 #B1B1B2, 0 1px 0 #fff;
+}
+
+#content {max-width:960px;margin:0 auto;padding: 1em 0; overflow:hidden;}
+form li {padding-bottom:0.25em;margin:0.25em 0;font-size:1em;position:relative;}
+
+.login_left button {
+    height: 48px;
+    width: 240px;
+    display: inline-block;
+    font-size: 2.2em;
+}
+
